Sizing fixes
transformed nav bar sizes to percentages to work with any viewport
changed body overflow-x to hidden and overflow-y to auto for vertical scrolling and no horizontal scrolling

--- a/Character Tracker.css
+++ b/Character Tracker.css
@@ -8,7 +8,7 @@
 	
 	background: -webkit-linear-gradient(top left, #E3FEFD, #E3FEF1);
 	height: 220px;
-	width: 100em;
+	width: 100%;
 	overflow: hidden;
 	display: block;
 	top: 0px;
@@ -52,7 +52,7 @@ hr {
 
 body {
     margin: 0px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 div {
@@ -63,7 +63,7 @@ div {
 /*Home Navigation Bar*/
 .homeNavBar {
 	position: absolute;
-	left: 80em;
+	left: 76%;
 	overflow: hidden;
 	background-color:rgba(0, 0, 0, 0.0);
 	font-family: "Georgia", serif;
