--- a/Stock Watcher.css
+++ b/Stock Watcher.css
@@ -8,7 +8,7 @@
 	
 	background: -webkit-linear-gradient(top left, #E3FEFD, #E3FEF1);
     height: 220px;
-    width: 100em;
+    width: 100%;
 	overflow: hidden;
 	display: block;
     top: 0px;
@@ -37,7 +37,9 @@ footer{
 
 body {
     margin: 0px;
-    overflow: auto;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 h1 {
@@ -61,7 +63,7 @@ div {
 
 .homeNavBar {
 	position: absolute;
-	left: 80em;
+	left: 76%;
 	overflow: hidden;
 	background-color:rgba(0, 0, 0, 0.0);
 	font-family: "Georgia", serif;
